# simple_vo

./: .gitignore  CMakeLists.txt  README.md  _gitignore.txt  simple_vo.kdev4
.kdev4/: simple_vo.kdev4
config/: parameters.cfg
src/: CMakeLists.txt  axis_angle.cpp  axis_angle.h  axis_angle.hpp  common_definitions.cpp  common_definitions.h  frame.cpp  frame.h  icp.cpp  icp.h  kalman_filter.cpp  kalman_filter.h  key_frame.cpp  key_frame.h  loop_closure.cpp  loop_closure.h  main.cpp  main0.cpp  main1.cpp  main2.cpp  main_func.h  measurement_base.cpp  measurement_base.h  parameter_config.cpp  parameter_config.h  source.cpp  source.h  state_variables.cpp  state_variables.h  visualizer.cpp  visualizer.h
